--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ height: 50px;
 /* Header Style */
 .nav-wrapper {
   background: #26283b;
-  opacity: 0.85;
+  /* opacity: 0.85; */
   font-size: 0.85em;
   font-weight: 200;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -350,7 +350,7 @@ height: 50px;
 /* Alert section */
 .alert-section {
 	text-align: center;
-	padding: 20px;
+	padding: 5px;
 }
 .alert-title {
 	font-weight: 600;
@@ -465,3 +465,32 @@ display: none;
 }
 
 
+.home{
+	background: rgb(30,41,59);
+	background: linear-gradient(175deg, rgba(30,41,59,1) 0%, rgba(91,116,139,1) 100%);
+}
+
+
+/* Fixed dimensions for all images in cards and carousels */
+.card-img-top, 
+.carousel-inner img {
+  width: 100%; /* Ensure the image stretches across its container */
+  height: 200px; /* Set a fixed height */
+  object-fit: cover; /* Ensures the image fills the dimensions without distortion */
+  border-radius: 8px; /* Optional: adds a slight border-radius for aesthetics */
+}
+
+.card {
+	position: relative;
+	transition: transform 0.3s, box-shadow 0.3s; /* Smooth effect */
+	cursor: pointer;
+  }
+  
+  .card:hover,
+  .card.hover-active {
+	transform: scale(1.05); /* Slightly enlarges the card */
+	box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2); /* Adds a shadow effect */
+	background-color: rgba(245, 245, 245, 0.9); /* Subtle background change */
+  }
+  
+  
